k8s/infra/grafana-backend.yaml
# Service for Gateway API with BackendConfig
apiVersion: v1
kind: Service
metadata:
  name: grafana-gateway
  namespace: infra
  annotations:
    cloud.google.com/backend-config: '{"default": "grafana-backend-config"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus
