k8s/infra/grafana-ingress.yaml
# GCE Ingress for Grafana with shared SSL certificate (managed in Terraform)
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-gce
  namespace: infra
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "grafana-backend-config"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "grud-ingress-ip"
    ingress.gcp.kubernetes.io/pre-shared-cert: "grud-cert"
spec:
  rules:
    - host: grafana.grudapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-gce
                port:
                  number: 80
